7172843: C1: fix "assert(has_printable_bci()) failed: _printable_bci should have been set"

Reviewed-by: twisti